# Elixir-Chain

./: .gitignore  README.md
docs/: index.md
frontend/: README.md
frontend/leptos/src/: main.rs
frontend/nextjs/pages/: index.js
node/: Cargo.toml  build.rs  elxr.ps1
runtime/: Cargo.toml  chain_spec.rs
runtime/parachain/: integration.rs
src/: contract.rs
src/eigenlayer/: Cargo.toml  client.rs  config.rs  mod.rs  operator.rs  oracle_integration.rs  service.rs  types.rs
src/error_correction/: bridge.rs  classical.rs  mod.rs  quantum.rs
src/error_correction/bridge/: bridge_error_correction.rs
src/error_correction/classical/: classical_error_correction.rs
src/error_correction/quantum/: quantum_error_correction.rs
src/integration/: mod.rs
src/pallet/: Cargo.toml  daemonless_oracle.rs  lib.rs  oracle.rs  oracle_liquidity.rs
src/pallet/src/: lib.rs  types.rs  weights.rs
src/pallets/liquidity/: Cargo.toml
src/pallets/oracle/: Cargo.toml
src/pallets/oracle/src/: lib.rs
src/pallets/registry/: Cargo.toml
src/pallets/registry/src/: lib.rs
