[package]
name = "elxr-eigenlayer"
version = "0.1.0"
edition = "2021"
authors = ["Matrix-Magiq Team"]
description = "Eigenlayer integration for Elixir Chain"

[dependencies]
# Eigenlayer SDK with all features
eigensdk = { version = "0.4.0", features = ["full"] }
# Substrate dependencies
sp-core = { version = "7.0.0", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
parity-scale-codec = { version = "3.2.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
# Async runtime
tokio = { version = "1.28.0", features = ["full"] }
# Ethereum interaction
ethers = { version = "2.0.4", features = ["rustls", "ws"] }
alloy-primitives = "0.3.3"
alloy-sol-types = "0.3.3"
# Utility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
anyhow = "1.0.71"
hex = "0.4.3"
async-trait = "0.1.68"
thiserror = "1.0.40"

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
]
