[package]
name = "pallet-daemonless-oracle"
version = "0.1.0"
edition = "2021"
authors = ["Matrix-Magiq Team"]
description = "Daemonless Oracle Pallet for Elixir Chain"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev" }
frame-system = { default-features = false, version = "4.0.0-dev" }
sp-std = { default-features = false, version = "5.0.0" }
sp-runtime = { default-features = false, version = "7.0.0" }
sp-io = { default-features = false, version = "7.0.0" }
sp-core = { default-features = false, version = "7.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
]
